# practice_code

./: .clangd  .gitignore  CMakeLists.txt
3rd/glad/: CMakeLists.txt
3rd/glad/src/: glad.c
3rd/glm/glm/: CMakeLists.txt
OpenGL/: CMakeLists.txt
OpenGL/01-base_opengl/: CMakeLists.txt  app.cpp
OpenGL/01-base_opengl/shader/: fragment.glsl
OpenGL/02-base_shader/: CMakeLists.txt  app.cpp
OpenGL/03-base_texture/: CMakeLists.txt  app.cpp
OpenGL/03-base_texture/shader/: fragment.glsl  vertex.glsl
OpenGL/04-base-coordinate_system/: CMakeLists.txt  app.cpp
OpenGL/04-base-coordinate_system/shader/: fragment.glsl  vertex.glsl
OpenGL/include/: app.hpp  i_homework.hpp
SDL/: CMakeLists.txt
SDL/00-base_framework/: CMakeLists.txt
SDL/00-base_framework/include/: App.hpp  SDL_workflow.hpp  app.hpp
SDL/00-base_framework/include/SDL/: SDL.hpp
SDL/00-base_framework/src/: App.cpp  SDL_workflow.cpp  app.cpp  main.cpp
SDL/01-gpu_render/: CMakeLists.txt
SDL/01-gpu_render/include/: App.hpp
SDL/01-gpu_render/include/SDL/: SDL.hpp
SDL/01-gpu_render/shader/: fragment.glsl  vertex.glsl
SDL/01-gpu_render/src/: App.cpp  main.cpp
SDL/02-opengl_render/: CMakeLists.txt  main.cpp
SDL/02-opengl_render/01-base_opengl/: CMakeLists.txt  app.cpp
SDL/02-opengl_render/01-base_opengl/shader/: vertex.glsl
SDL/02-opengl_render/02-base_shader/: CMakeLists.txt  app.cpp
SDL/02-opengl_render/02-base_shader/shader/: vertex.glsl
SDL/02-opengl_render/03-base_texture/: CMakeLists.txt  app.cpp
SDL/02-opengl_render/03-base_texture/shader/: fragment.glsl
SDL/02-opengl_render/include/: app.hpp  opengl.hpp
SDL/02-opengl_render/src/: app.cpp
SDL/3rd/glad/: CMakeLists.txt
SDL/3rd/glad/include/glad/: glad.h
SDL/3rd/glad/src/: glad.c
SDL/3rd/glm/: CMakeLists.txt
SDL/3rd/stb/: CMakeLists.txt
SDL/SDL/: CMakeLists.txt
SDL/cmake/: fetch_sdl.cmake  utils.cmake
SDL/common/opengl/: CMakeLists.txt
SDL/common/opengl/include/opengl/: gl.hpp  gl_error.hpp  gl_shader.hpp
cmake/: utils.cmake
common/SDL/: CMakeLists.txt
common/SDL/include/SDL/: SDL.hpp
common/opengl/: CMakeLists.txt
common/opengl/include/opengl/: gl.hpp
